<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collapsingtoolbar"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="@color/blue"
            app:title="@string/app_name"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:background="@drawable/back">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:clickable="true"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:onClick="onClickTape"
                    android:foreground="?attr/selectableItemBackground">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/circle_green"
                            android:src="@drawable/ic_tape"
                            android:padding="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/tape"
                            android:textColor="@color/black"
                            android:layout_marginTop="10dp"
                            android:textSize="20sp"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:background="@color/grey"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tape_t"
                            android:gravity="center"
                            android:padding="5dp"/>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="onClickProfile">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/circle_pink"
                            android:padding="10dp"
                            android:src="@drawable/ic_profile" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/account"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:layout_margin="10dp"
                            android:background="@color/grey" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/account_t" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:onClick="onClickChat"
                    android:foreground="?attr/selectableItemBackground">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/circle_yellow"
                            android:src="@drawable/ic_baseline_message_24"
                            android:padding="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/chat"
                            android:textColor="@color/black"
                            android:layout_marginTop="10dp"
                            android:textSize="20sp"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:background="@color/grey"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/chat_t"
                            android:gravity="center"
                            android:padding="5dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onClickUsers"
                    android:foreground="?attr/selectableItemBackground">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/circle_red"
                            android:src="@drawable/ic_baseline_people_24"
                            android:padding="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/users"
                            android:textColor="@color/black"
                            android:layout_marginTop="10dp"
                            android:textSize="20sp"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:background="@color/grey"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/user_t"
                            android:gravity="center"
                            android:padding="5dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:onClick="onClickUs"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/circle_blue"
                            android:src="@drawable/ic_baseline_psychology_24"
                            android:padding="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/author"
                            android:textColor="@color/black"
                            android:layout_marginTop="10dp"
                            android:textSize="20sp"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:background="@color/grey"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/author_t" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:onClick="onClickNot"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/teal_bacl"
                            android:src="@drawable/ic_not"
                            android:padding="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/not"
                            android:textColor="@color/black"
                            android:layout_marginTop="10dp"
                            android:textSize="20sp"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:background="@color/grey"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/not_t" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>